[build-system]
requires = ["setuptools>=68,<77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webprobe-cli"
version = "0.1.0"
description = "Website reconnaissance tool — DNS, SSL, headers, tech stack, WHOIS, subdomain enumeration"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "shazeus", email = "efeborazan07@gmail.com" }]
keywords = ["recon", "reconnaissance", "dns", "ssl", "whois", "security", "cli", "web", "subdomain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Security",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
]
requires-python = ">=3.9"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "requests>=2.28",
    "dnspython>=2.3",
    "python-whois>=0.8",
]

[project.urls]
Homepage = "https://github.com/shazeus/webprobe-cli"
Repository = "https://github.com/shazeus/webprobe-cli"
"Bug Tracker" = "https://github.com/shazeus/webprobe-cli/issues"

[project.scripts]
webprobe = "webprobe.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["webprobe*"]
